--- a/Testing/testing.tex
+++ b/Testing/testing.tex
@@ -38,7 +38,7 @@ There were no changes made to my outline plan.
 
 1.02 & Test the Change Email button on the profile window functions properly & A pop-up with a text box should display prompting you to enter your first and last name & Click 'Edit' followed by 'Change Email' & Normal &  A pop-up with a text box should display prompting you to enter your first and last name & &  \\ \hline
 
-1.03 & Test the Change Picture button on the profile window functions properly &  The default file browser for the system should open, allowing the user to select a jpeg image & click the 'Edit' button followed by the 'Change Picture' button & Normal & Default file browser should appear & &\\ \hline
+1.03 & Test the Change Picture button on the profile window functions properly &  The default file browser for the system should open, allowing the user to select a Trick.JPG & click the 'Edit' button followed by the 'Change Picture' button & Normal & Default file browser should appear & &\\ \hline
 
 
 
@@ -84,7 +84,7 @@ There were no changes made to my outline plan.
 
 2.00 & Verify an appropriate name is entered to the 'Change Name' pop-out. & Should not accept the name if it is not valid & 1.Ben 2.Keppie 3.   4.12345  5.Ben10 & 1.Normal 2.Normal 3.Erroneous 4.Erroneous 5.Erroneous & 1.Accept 2.Accept 3.Error (Presence) 4.Error (Numbers) 5.Error (Numbers) & & \\ \hline
 
-2.01 & Verify an appropriate picture is selected in the 'Change Picture' pop-out & Should only accept JPEG images & 1.Picture.JPEG 2.Picture.PNG 3.Picture.txt & 1.Normal 2.Erroneous 3.Erroneous & 1.Accept 2.Error (File Type) 3.Error (File Type) & & \\ \hline
+2.01 & Verify an appropriate picture is selected in the 'Change Picture' pop-out & Should only accept Trick.JPGs & 1.Picture.JPEG 2.Picture.PNG 3.Picture.txt & 1.Normal 2.Erroneous 3.Erroneous & 1.Accept 2.Error (File Type) 3.Error (File Type) & & \\ \hline
 
 2.02 & Verify a valid email is entered to the 'Change Email' pop-out & Should only accept a correct email format & 1.BenKeppie@hotmail.co.uk 2.BenKeppieEmail.com 3.Ji1290.co.uk & 1. Normal 2. Erroneous 3. Erroneous & 1. Accept 2. Error(Format) 3.Error(Format) & & \\ \hline
 
@@ -96,7 +96,7 @@ There were no changes made to my outline plan.
 
 2.04 & Verify presence for adding a trick tutorial link & Checks something is entered and that it is a website link & 1.\url{http://www.youtube.com/watch?V=1} 2. & 1.Normal 2.Erroneous & 1.Accept 2.Error(Presence) & & \\ \hline
 
-2.05 & Verify an appropriate picture is selected in the 'add a trick' pop-out & Should only accept JPEG images & 1.Picture.JPEG 2.Picture.PNG 3.Picture.txt & 1.Normal 2.Erroneous 3.Erroneous & 1.Accept 2.Error (File Type) 3.Error (File Type) & & \\ \hline
+2.05 & Verify an appropriate picture is selected in the 'add a trick' pop-out & Should only accept Trick.JPGs & 1.Picture.JPEG 2.Picture.PNG 3.Picture.txt & 1.Normal 2.Erroneous 3.Erroneous & 1.Accept 2.Error (File Type) 3.Error (File Type) & & \\ \hline
 
 2.06 & Verify a difficulty is selected & Drop down box with 3 options & 1.Easy 2.Medium 3.Hard 4. & 1.Normal 2.Normal 3.Normal 4.Erroneous & 1.Accept 2.Accept 3.Accept 4.Error(Presence) & & \\ \hline
 
@@ -124,7 +124,7 @@ There were no changes made to my outline plan.
 
 3.00 & Verify the first and last name are inputted into the database & The first and last name should be added to the database & 1.FirstName 2.LastName & 1.Normal 2.Normal & 1.Accept 2.Accept & &  \\ \hline
 
-3.01 & Verify the profile picture is inputted into the database & A jpeg image should be added to the database & JPEG image & Normal & Accept & & \\ \hline
+3.01 & Verify the profile picture is inputted into the database & A Trick.JPG should be added to the database & Trick.JPG & Normal & Accept & & \\ \hline
 
 3.02 & Verify an email is inputted into the database & An email should be added to the database & BenKeppie@hotmail.co.uk & Normal & Accept  & & \\ \hline
 
@@ -134,7 +134,7 @@ There were no changes made to my outline plan.
 
 3.05  & Verify a trick obstacle is inputted into the database & A trick obstacle should be added to the database & Flat ground & Normal & Accept & & \\ \hline
 
-3.06 & Verify a trick image is inputted into the database & A trick image should be added to the database & JPEG Image & Normal & Accept & & \\ \hline
+3.06 & Verify a trick image is inputted into the database & A trick image should be added to the database & Trick.JPG & Normal & Accept & & \\ \hline
 
 3.07 & Verify a trick tutorial link is inputted into the database & A trick tutorial link should be added to the database & \url{www.youtube.com/watch?v=?} & Normal & Accept & & \\ \hline
 
@@ -189,7 +189,7 @@ There were no changes made to my outline plan.
         \textbf{Test Series} & \textbf{Purpose of Test} & \textbf{Test Description} & \textbf{Test Data} & \textbf{Test Data Type (Normal/ Erroneous/ Boundary)} & \textbf{Expected Result} & \textbf{Actual Result} & \textbf{Evidence}\\ \hline
 1.00 & Test that the 'Profile' tab functions properly & This should load the profile window & Click the 'Profile' tab in the application & Normal & The profile window should be displayed & &  \\ \hline
 
-1.03 & Test the Change Picture button on the profile window functions properly &  The default file browser for the system should open, allowing the user to select a jpeg image & click the 'Edit' button followed by the 'Change Picture' button & Normal & Default file browser should appear & &\\ \hline
+1.03 & Test the Change Picture button on the profile window functions properly &  The default file browser for the system should open, allowing the user to select a Trick.JPG & click the 'Edit' button followed by the 'Change Picture' button & Normal & Default file browser should appear & &\\ \hline
 
 
 
@@ -204,7 +204,7 @@ There were no changes made to my outline plan.
 
 
 
-2.01 & Verify an appropriate picture is selected in the 'Change Picture' pop-out & Should only accept JPEG images & 1.Picture.JPEG 2.Picture.PNG 3.Picture.txt & 1.Normal 2.Erroneous 3.Erroneous & 1.Accept 2.Error (File Type) 3.Error (File Type) & & \\ \hline
+2.01 & Verify an appropriate picture is selected in the 'Change Picture' pop-out & Should only accept Trick.JPGs & 1.Picture.JPEG 2.Picture.PNG 3.Picture.txt & 1.Normal 2.Erroneous 3.Erroneous & 1.Accept 2.Error (File Type) 3.Error (File Type) & & \\ \hline
 
 
 2.03 & Verify presence for adding a tricks name & Checks something is entered & 1.Ollie 2.  & 1.Normal 2.Erroneous & 1.Accept 2.Error(Presence) & & \\ \hline
@@ -215,7 +215,7 @@ There were no changes made to my outline plan.
 
 2.04 & Verify presence for adding a trick tutorial link & Checks something is entered and that it is a website link & 1.\url{http://www.youtube.com/watch?V=1} 2. & 1.Normal 2.Erroneous & 1.Accept 2.Error(Presence) & & \\ \hline
 
-2.05 & Verify an appropriate picture is selected in the 'add a trick' pop-out & Should only accept JPEG images & 1.Picture.JPEG 2.Picture.PNG 3.Picture.txt & 1.Normal 2.Erroneous 3.Erroneous & 1.Accept 2.Error (File Type) 3.Error (File Type) & & \\ \hline
+2.05 & Verify an appropriate picture is selected in the 'add a trick' pop-out & Should only accept Trick.JPGs & 1.Picture.JPEG 2.Picture.PNG 3.Picture.txt & 1.Normal 2.Erroneous 3.Erroneous & 1.Accept 2.Error (File Type) 3.Error (File Type) & & \\ \hline
 
 2.06 & Verify a difficulty is selected & Drop down box with 3 options & 1.Easy 2.Medium 3.Hard 4. & 1.Normal 2.Normal 3.Normal 4.Erroneous & 1.Accept 2.Accept 3.Accept 4.Error(Presence) & & \\ \hline
 
@@ -244,7 +244,7 @@ There were no changes made to my outline plan.
 
 3.00 & Verify the first and last name are inputted into the database & The first and last name should be added to the database & 1.FirstName 2.LastName & 1.Normal 2.Normal & 1.Accept 2.Accept & &  \\ \hline
 
-3.01 & Verify the profile picture is inputted into the database & A jpeg image should be added to the database & JPEG image & Normal & Accept & & \\ \hline
+3.01 & Verify the profile picture is inputted into the database & A Trick.JPG should be added to the database & Trick.JPG & Normal & Accept & & \\ \hline
 
 3.02 & Verify an email is inputted into the database & An email should be added to the database & BenKeppie@hotmail.co.uk & Normal & Accept  & & \\ \hline
 
@@ -254,7 +254,7 @@ There were no changes made to my outline plan.
 
 3.05  & Verify a trick obstacle is inputted into the database & A trick obstacle should be added to the database & Flat ground & Normal & Accept & & \\ \hline
 
-3.06 & Verify a trick image is inputted into the database & A trick image should be added to the database & JPEG Image & Normal & Accept & & \\ \hline
+3.06 & Verify a trick image is inputted into the database & A trick image should be added to the database & Trick.JPG & Normal & Accept & & \\ \hline
 
 3.07 & Verify a trick tutorial link is inputted into the database & A trick tutorial link should be added to the database & \url{www.youtube.com/watch?v=?} & Normal & Accept & & \\ \hline
 
@@ -488,7 +488,7 @@ Please see column 'Test Data' in subsection 'Changed Items From Detailed Plan' a
 
 \section{Annotated Samples}
 
-\subsection{Actual Results}
+\subsection{Actual Results} %MORE?
 
 The table below contains my finalised test plan, including the retained and changed test series. In the 'actual results' column, the text in bold are tests that failed.
 
@@ -503,7 +503,7 @@ The table below contains my finalised test plan, including the retained and chan
 
 1.02 & Test the Change Email button on the profile window functions properly & The line edit will be available to edit and then once save is clicked, it will be read only & Click 'Edit' followed by 'Change Email', and then 'save' & Normal &  The email line edit should be available to edit & The email line edit became available to edit &  \\ \hline
 
-1.03 & Test the Change Picture button on the profile window functions properly &  The default file browser for the system should open, allowing the user to select a jpeg image & click the 'Edit' button followed by the 'Change Picture' button & Normal & Default file browser should appear & The default file browser appeared allowing you to pick a file &\\ \hline
+1.03 & Test the Change Picture button on the profile window functions properly &  The default file browser for the system should open, allowing the user to select a Trick.JPG & click the 'Edit' button followed by the 'Change Picture' button & Normal & Default file browser should appear & The default file browser appeared allowing you to pick a file &\\ \hline
 
 1.05 & Test the add trick button functions properly & This should load a side form to add a trick & Click the add trick button at the top left corner of the application & Normal & A side form prompting you to add a trick should appear & A side form appeared on the left hand side prompting the user to add a trick & Figure \ref{fig:Test 1.05} on page \pageref{fig:Test 1.05} \\ \hline
 
@@ -535,7 +535,7 @@ The table below contains my finalised test plan, including the retained and chan
 
 2.00 & Verify an appropriate name is entered to the 'Change Name' line edit. & Should not accept the name if it is not valid & 1.Ben 2.Keppie 3.   4.12345  5.Ben10 & 1.Normal 2.Normal 3.Erroneous 4.Erroneous 5.Erroneous & 1.Accept 2.Accept 3.Error (Presence) 4.Error (Numbers) 5.Error (Numbers) & 1.Passed 2.Passed \textbf{3.Failed 4.Failed 5.Failed} &Figure \ref{fig:Test 2.00} on page \pageref{fig:Test 2.00} \\ \hline
 
-2.01 & Verify an appropriate picture is selected in the 'Change Picture' pop-out & Should only accept JPEG images & 1.Picture.JPEG 2.Picture.PNG 3.Picture.txt & 1.Normal 2.Erroneous 3.Erroneous & 1.Accept 2.Error (File Type) 3.Error (File Type) & 1.Passed \textbf{2.Failed 3.Failed} & \\ \hline
+2.01 & Verify an appropriate picture is selected in the 'Change Picture' pop-out & Should only accept Trick.JPGs & 1.Picture.JPEG 2.Picture.PNG 3.Picture.txt & 1.Normal 2.Erroneous 3.Erroneous & 1.Accept 2.Error (File Type) 3.Error (File Type) & 1.Passed \textbf{2.Failed 3.Failed} & \\ \hline
 
 2.02 & Verify a valid email is entered to the 'Change Email' line edit & Should only accept a correct email format & 1.BenKeppie@hotmail.co.uk 2.BenKeppieEmail.com  3.Ji1290.co.uk & 1. Normal 2. Erroneous 3. Erroneous & 1. Accept 2. Error(Format) 3.Error(Format) & 1.Passed \textbf{2.Failed 3.Failed} & \\ \hline
 
@@ -547,7 +547,7 @@ The table below contains my finalised test plan, including the retained and chan
 
 2.04 & Verify presence for adding a trick tutorial link & Checks a valid link is entered, and is allowed to be left empty & 1.\url{http://www.youtube.com/watch?V=1} 2.\url{http://www.google.com} 3. & 1.Normal 2.Erroneous & 1.Accept 2.Error(Format) 3. & 1.Passed 2.Passed 3.Passed & \\ \hline
 
-2.05 & Verify an appropriate picture is selected in the 'add a trick' pop-out & Should only accept JPEG images & 1.Picture.JPEG 2.Picture.PNG 3.Picture.txt & 1.Normal 2.Erroneous 3.Erroneous & 1.Accept 2.Error (File Type) 3.Error (File Type) & 1.Passed \textbf{2.Failed 3.Failed} & \\ \hline
+2.05 & Verify an appropriate picture is selected in the 'add a trick' pop-out & Should only accept Trick.JPGs & 1.Picture.JPEG 2.Picture.PNG 3.Picture.txt & 1.Normal 2.Erroneous 3.Erroneous & 1.Accept 2.Error (File Type) 3.Error (File Type) & 1.Passed \textbf{2.Failed 3.Failed} & \\ \hline
 
 2.06 & Verify a difficulty is selected & Drop down box with 3 options & 1.Easy 2.Medium 3.Hard 4. & 1.Normal 2.Normal 3.Normal 4.Erroneous & 1.Accept 2.Accept 3.Accept 4.Error(Presence) & 1.Passed 2.Passed 3.Passed 4.Passed & Figure \ref{fig:Test 2.06 p1} on page \pageref{fig:Test 2.06 p1}, Figure \ref{fig:Test 2.06 p2} on page \pageref{fig:Test 2.06 p2}, Figure \ref{fig:Test 2.06 p3} on page \pageref{fig:Test 2.06 p3} \\ \hline
 
@@ -576,7 +576,7 @@ The table below contains my finalised test plan, including the retained and chan
 
 3.00 & Verify the first and last name are inputted into the database & The first and last name should be added to the database & 1.FirstName 2.LastName & 1.Normal 2.Normal & 1.Accept 2.Accept & 1.Passed 2.Passed & Figure \ref{fig:Test 3.00} on page \pageref{fig:Test 3.00}  \\ \hline
 
-3.01 & Verify the profile picture is inputted into the database & A jpeg image should be added to the database & ProfilePicture.JPG & Normal & Accept & File path was added to the database & \\ \hline
+3.01 & Verify the profile picture is inputted into the database & A Trick.JPG should be added to the database & ProfilePicture.JPG & Normal & Accept & File path was added to the database & \\ \hline
 
 3.02 & Verify an email is inputted into the database & An email should be added to the database & BenKeppie@hotmail.co.uk & Normal & Accept  & Email was added to the database & \\ \hline
 
@@ -625,7 +625,7 @@ The table below contains my finalised test plan, including the retained and chan
 \end{landscape}
 
 
-\subsection{Evidence}
+\subsection{Evidence} %DO MORE TESTS
 
 \textbf{Test 1.00 Evidence}
 
@@ -766,12 +766,12 @@ All of the previous annotated samples contribute to Test 5.00. There are element
 
 \section{Evaluation}
 
-\subsection{Approach to Testing}
+\subsection{Approach to Testing} %MORE JUSTIFICATION
 
 For each of my test series I used a different approach to testing. For my first test series I chose to use top-down testing as the flow of user interfaces was hierarchical. This was the best option as there are multiple interfaces which stem from the original interface. For my second test series I chose bottom-up testing as I needed to test the lower levels of data input to ensure the information had been entered into the database. Following this, it allows me to test other areas of my program which use the information from the database. For my third test series I chose to use white box testing as I for the individual tests I have to look inside the database after inputting information into the program, which then adds the data to the database. For my fourth test series I chose black box testing as I was checking to see if algorithms returned the correct value without looking at the internal structure of the code. Finally, for my fifth test series I chose acceptance testing as this is conducted to determine if the specification is met.
 
 
-\subsection{Problems Encountered}
+\subsection{Problems Encountered} %CROSS REFERENCE
 
 Testing my program allowed me to identify areas of the system which did not work as intended. These tests are identified below, with an explanation. I will endeavour to fix all of the errors for the final release of my program which I will give to my client.
 
@@ -781,14 +781,14 @@ The line edits in the 'profile' tab which allow you to edit your first name, las
 
 \textbf{Test 2.01 and Test 2.05}
 
-When uploading pictures for the program, the file type accepted was supposed to be limited to a .jpeg file; however the program accepted any file type. This is a minor problem, but can be annoying as file types that aren't .jpeg will not be displayed. For example, if a .txt file is uploaded for the profile picture, the profile picture will appear to be blank. This could easily be fixed by a short validation method and then a message being displayed on the status bar.
+When uploading pictures for the program, the file type accepted was supposed to be limited to a .jpeg file; however the program accepted any file type. This is a minor problem, but can be annoying as file types that aren't .jpeg will not be displayed. For example, if a .txt file is uploaded for the profile picture, the profile picture will appear to be blank. This could easily be fixed by a short validation method and then a message being displayed on the status bar. 
 
 
 \textbf{Test 5.00}
 
 The build up of minor errors, along with the fact that the graphical user interface is not complete within the reviews tab, has lead to the failure of this test. For this test to pass the whole program would have to be completed at a usable graphical user interface level, along with every test series passing. This means I am not that far off passing this test as all that needs to be done is a few validation methods in certain input areas and the review table input form functionality.
 
-\subsection{Strengths of Testing}
+\subsection{Strengths of Testing} %MAKE MORE STATEMENTS AND BACK UP WITH EVIDENCE.
 
 I feel that my testing methods were particularly strong. This was partnered with the large amount of individual tests in each test series to show which parts of my program worked, and which parts didn't. The use of multiple different testing types allowed for my system to be tested in many different aspects which then gave a rigorous analysis of the functionality of my program. My testing allowed me to see if the functions made the correct changes to the database and user interface.
 
@@ -796,10 +796,10 @@ I feel that my testing methods were particularly strong. This was partnered with
 
 The weakness of my testing is the fact that not every single aspect of my program was identified, therefore there could be some areas of my program which have errors in, of which I do not know about. My testing also doesn't look at the internal structure of the code. This means that there could be parts of my code which are inefficient and therefore could be coded in a much more efficient way which would lead to less processing power needing to be used as well as a faster program.
 
-\subsection{Reliability of Application}
+\subsection{Reliability of Application} %EVIDENCE?
 
 The reliability of my program is questionable. It carries out most of the initial functions that I set for it to do; however some key features are missing and my testing has highlighted those areas. With a few minor tweaks, these issues would be rectified. The two main problems with the reliability of my program lie within the validation of some fields and the mixed program usage (graphical user interface and command line interface). As I didn't have time to complete the command line interface, some of the functionality (the review tab) is only available to use in a command line interface. This is not a problem within the functionality, but for my client, this form of information editing is not acceptable. None of the image parts of my program validate the file type which is a key contributing factor to the decreases reliability of my program. Looking back on my program I should have changed some of the entry field to fixed combo boxes as the some of the information that can be entered into the database could be inaccurate, and therefore my program is only as reliable if the data input is accurate.
 
-\subsection{Robustness of Application}
+\subsection{Robustness of Application} %EVIDENCE 
 
 Even though my application failed a few of its test series, I would still deem my program robust. Regardless of whether parts of the program didn't work, at no time did this cause the program to crash, lose any data or start an infinite loop which would leave the program unable to use. With some of my input fields, even if data is not designed to go into an input field, an error message is displayed and the program continues as normal. This is a good quality of my program as the support section will allow for users to report errors that happen as the program doesn't crash due to the errors. This will then allow for me to identify the error, fix it and send out a new release of the program.
