--- a/Evaluation/evaluation.tex
+++ b/Evaluation/evaluation.tex
@@ -4,50 +4,121 @@
 
 Below is a list of all my general and specific objectives that I set myself in the analysis section. In this section I will determine whether I have met all of these objectives and the reasoning behind it. The subsections with *NEW* in the title are objectives that I did not identify in my analysis section; however during the course of my implementation, I attempted to meet the objectives. 
 
-\subsection{Aesthetically pleasing, easy to navigate GUI.}
+\subsection{Aesthetically pleasing, easy to navigate GUI.} %Need feedback
+
+
+
 
 \subsection{Videos organised and filtering capabilities.}
 
+This objective has not been met.
+
+
+
 \subsection{Correct and accurate mapping to the skate parks/spots.}
+
+This objective has not been met.
+
+
 
 \subsection {Correct directions from current location to skate park/ spot on the map.}
 
+This objective has not been met.
+
+
+
 \subsection{Non-biased reviews.}
 
-\subsection{Clear database with a list of tricks in.}
+This objective has not been met.
+
+
+
+\subsection{Clear database with a list of tricks in.} %Need feedback
+
+
+
 
 \subsection{ Easy to filter through tricks known.}
 
+This objective has not been met.
+
+
+
 \subsection {Display status bar messages at appropriate times to inform the user of changes *NEW*}
+
+This objective has been met.
+
+
 
 \subsection {Allow for the user to contact the developer *NEW*}
 
-\subsection {Ensure that the profile picture can be changed easily *NEW*}
+This objective has been met.
 
-\subsection {Ensure that the profile name can be edited easily *NEW*}
 
-\subsection {Ensure that the profile email can be edited easily *NEW*}
+
+\subsection {Ensure that the profile picture can be changed easily *NEW*} %Need feedback
+
+This objective has been met.
+
+
+
+\subsection {Ensure that the profile name can be edited easily *NEW*} %Need feedback
+
+This objective has been met.
+
+
+
+
+\subsection {Ensure that the profile email can be edited easily *NEW*} %Need feedback
+
+This objective has been met.
+
+
 
 
 \subsection {Ensure that videos can be filtered by categories. e.g easy, medium, hard tricks.}
 
+This objective hasn't been met.
+
+
+
+
 \subsection {Ensure that videos load correctly and are linked to the right video.}
 
+This objective hasn't been met.
+
+
+
+
 \subsection {Ensure that videos are displayed at the correct size/resolution that the monitor of the computer is.}
+
+This objective hasn't been met.
 
 
 
 \subsection {Ensure the database can add, edit and remove trick data (Name, description, image, completed status and tutorial link).}
 
+This objective hasn't been met. However part of the objective has.
+
 \subsection {Ensure that the database is displayed correctly inside the application at all resolutions.}
+
+This objective has been met.
 
 \subsection {Ensure that the tricks are marked by how hard they are by a three way scale of: Easy, Medium or Hard.}
 
+This objective has been met.
+
 \subsection {Ensure a checkbox is by the side of a trick to represent whether the user has completed that trick or not.}
+
+This objective hasn't been met.
 
 \subsection {Ensure there is a search bar for a specific trick name.}
 
+This objective hasn't been met.
+
 \subsection {Ensure there are filters for tricks e.g Switch trick filters.}
+
+This objective hasn't been met.
 
 
 
